--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">M2024A</string>
+    <string name="price">Price</string>
+    <string name="tax" translatable="false">Tax</string>
+    <string name="tip" translatable="false">Tip %</string>
 </resources>
